plugins {
    id 'org.springframework.boot' version '4.1.1'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'java'
    id 'jacoco'
    id 'com.diffplug.spotless' version '8.10.1'
}

group = 'com.kizuna'
version = '0.1.0'

// 除外は「api/dto（DTO + MapStruct 生成物）」と「純粋な設定クラス」のみ。
// domain 層は業務行動を含むため必ずカバレッジ対象。
def jacocoCoverageExcludes = [
    "**/api/dto/**",
    "**/shared/config/**",
    "**/Application.class"
]

java {
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.boot:spring-boot-dependencies:4.1.1"
        mavenBom "org.springframework.modulith:spring-modulith-bom:2.1.1"
        mavenBom "software.amazon.awssdk:bom:2.54.7"
    }
}


tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

repositories {
    mavenCentral()
}

configurations.configureEach {
    exclude group: 'org.apache.logging.log4j', module: 'log4j-to-slf4j'
    exclude group: 'ch.qos.logback', module: 'logback-classic'
}

dependencies {
    implementation 'com.googlecode.libphonenumber:libphonenumber:9.0.39'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    // Bearer トークン検証をフレームワーク保守の標準部品（resource-server）に委ねるため。
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-log4j2'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    runtimeOnly 'org.postgresql:postgresql'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    runtimeOnly 'io.lettuce:lettuce-core'
    // Spring Boot 4 でキャッシュの CacheAutoConfiguration は単体 autoconfigure から spring-boot-cache へ分離された。
    // @EnableCaching + spring.cache.type=redis で RedisCacheManager を生成するために明示的に必要。
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'org.liquibase:liquibase-core'
    // Spring Boot 4 で LiquibaseAutoConfiguration は単体 autoconfigure から spring-boot-liquibase へ分離された。
    // これが無いと liquibase-core があってもマイグレーションが一切実行されない（schema 未生成のまま起動する）。
    implementation 'org.springframework.boot:spring-boot-liquibase'
    implementation 'io.hypersistence:hypersistence-utils-hibernate-73:3.15.5'
    implementation 'org.mapstruct:mapstruct:1.6.3'
    implementation 'org.springframework.modulith:spring-modulith-starter-jdbc'
    // S3 互換オブジェクトストレージ（MinIO）連携。s3 モジュールは HTTP クライアント実装を test スコープでしか
    // 宣言しないため、同期クライアント用に url-connection-client を明示的に追加する（version は BOM で解決）。
    implementation 'software.amazon.awssdk:s3'
    implementation 'software.amazon.awssdk:url-connection-client'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    // Spring Boot 4 でスライステスト系アノテーションは技術別モジュールへ分離された。@WebMvcTest はこの成果物にある。
    testImplementation 'org.springframework.boot:spring-boot-webmvc-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.springframework.modulith:spring-modulith-starter-test'
    // Spring Boot 4 で TestRestTemplate は spring-boot-resttestclient へ分離された（統合テストの HTTP クライアント。
    // integrationTest は testImplementation を extendsFrom するため testImplementation で宣言する）。
    // TestRestTemplateTestAutoConfiguration は spring-boot-restclient の RestTemplateBuilder に依存するため後者も必要。
    testImplementation 'org.springframework.boot:spring-boot-resttestclient'
    testImplementation 'org.springframework.boot:spring-boot-restclient'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'

    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    testAnnotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
}

test {
    useJUnitPlatform()
}

// resources 配下の AI 規約文書（db/CLAUDE.md, db/AGENTS.md）は成果物に含めない
processResources {
    exclude '**/CLAUDE.md'
    exclude '**/AGENTS.md'
}

spotless {
    java {
        target 'src/**/*.java'
        googleJavaFormat('1.35.0')
    }
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        html.required = true
    }
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: jacocoCoverageExcludes)
        }))
    }
}

jacocoTestCoverageVerification {
    violationRules {
        rule {
            element = 'BUNDLE'
            limit {
                counter = 'LINE'
                value = 'COVEREDRATIO'
                minimum = 0.70
            }
        }
    }
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: jacocoCoverageExcludes)
        }))
    }
}

check.dependsOn jacocoTestReport, jacocoTestCoverageVerification
check.dependsOn spotlessCheck

jar {
    archiveBaseName.set(rootProject.name)
    archiveVersion.set(version.toString())
}

// 統合テスト（本物の PostgreSQL/Redis に接続。docker-compose.test.yml 経由で実行する）
// check には紐づけない: 単体テストは従来どおり Dockerfile test ステージで完結させ、
// 統合テストは compose ネットワーク内のランナーからのみ実行する
sourceSets {
    integrationTest {
        java.srcDir 'src/integrationTest/java'
        resources.srcDir 'src/integrationTest/resources'
        compileClasspath += sourceSets.main.output
        runtimeClasspath += sourceSets.main.output
    }
}

configurations {
    integrationTestImplementation.extendsFrom testImplementation
    integrationTestRuntimeOnly.extendsFrom testRuntimeOnly
}

tasks.register('integrationTest', Test) {
    description = '統合テスト（compose ネットワーク内で実行すること。task -d backend test 参照）'
    group = 'verification'
    testClassesDirs = sourceSets.integrationTest.output.classesDirs
    classpath = sourceSets.integrationTest.runtimeClasspath
    useJUnitPlatform()
    // 統合テストの入力は compose で毎回作り直す DB（Gradle から不可視の外部状態）のため、増分判定を無効化して毎回実行する
    outputs.upToDateWhen { false }
    shouldRunAfter test
}
